--- a/SportEvent/Views/User/Delete.cshtml
+++ b/SportEvent/Views/User/Delete.cshtml
@@ -37,7 +37,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete mt-2">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Profile">Back</a>
     </form>
