--- a/SportEvent/Views/SportEvent/Create.cshtml
+++ b/SportEvent/Views/SportEvent/Create.cshtml
@@ -1,42 +1,43 @@
-﻿@model SportEvent.Models.SportEventCreateModel
+﻿@using SportEvent.Models 
+@model SportEvent.Models.SportEventCreateModel
 @{
     ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
 
-<h4>SportEventCreateModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="eventDate" class="control-label"></label>
+                <label asp-for="eventDate" class="control-label">Event Date<span class="text-danger">*</span></label>
                 <input asp-for="eventDate" class="form-control" />
                 <span asp-validation-for="eventDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventType" class="control-label"></label>
+                <label asp-for="eventType" class="control-label">Event Type<span class="text-danger">*</span></label>
                 <input asp-for="eventType" class="form-control" />
                 <span asp-validation-for="eventType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventName" class="control-label"></label>
+                <label asp-for="eventName" class="control-label">Event NAme<span class="text-danger">*</span></label>
                 <input asp-for="eventName" class="form-control" />
                 <span asp-validation-for="eventName" class="text-danger"></span>
             </div>
-           @*  <div class="form-group">
-                <label asp-for="organizerId" class="control-label"></label>
+             <div class="form-group">
+                <label asp-for="organizerId" class="control-label">Organizer Id<span class="text-danger">*</span></label>
                 <input asp-for="organizerId" class="form-control" />
                 <span asp-validation-for="organizerId" class="text-danger"></span>
-            </div> *@
-            <div class="form-group">
-                <label asp-for="organizerId" class="control-label"></label>
-                <select asp-for="organizerId" asp-items="@(new SelectList(ViewBag.Organizers, "id", "organizerName"))" class="form-control"></select>
-                <span asp-validation-for="organizerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+     @*       <div class="form-group">
+                @Html.LabelFor(model => model.organizerId, "Organizer", htmlAttributes: new { @class = "control-label" })
+                @Html.DropDownListFor(model => model.organizerId, new SelectList(ViewBag.Organizers, "id", "organizerName"), "Select Organizer", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.organizerId, "", new { @class = "text-danger" })
+            </div>*@
+
+            <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
