--- a/SportEvent/Views/SportEvent/Edit.cshtml
+++ b/SportEvent/Views/SportEvent/Edit.cshtml
@@ -18,26 +18,26 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventDate" class="control-label"></label>
+                <label asp-for="eventDate" class="control-label">Event Date</label>
                 <input asp-for="eventDate" class="form-control" />
                 <span asp-validation-for="eventDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventType" class="control-label"></label>
+                <label asp-for="eventType" class="control-label">Event Type</label>
                 <input asp-for="eventType" class="form-control" />
                 <span asp-validation-for="eventType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="eventName" class="control-label"></label>
+                <label asp-for="eventName" class="control-label">Event Name</label>
                 <input asp-for="eventName" class="form-control" />
                 <span asp-validation-for="eventName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="organizerId" class="control-label"></label>
+                <label asp-for="organizerId" class="control-label">Organizer Id</label>
                 <input asp-for="organizerId" class="form-control" />
                 <span asp-validation-for="organizerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
