--- a/SportEvent/Views/User/ChangePassword.cshtml
+++ b/SportEvent/Views/User/ChangePassword.cshtml
@@ -11,21 +11,21 @@
         <form asp-action="ChangePassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="oldPassword" class="control-label"></label>
+                <label asp-for="oldPassword" class="control-label">Old Password</label>
                 <input asp-for="oldPassword" class="form-control" />
                 <span asp-validation-for="oldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="newPassword" class="control-label"></label>
+                <label asp-for="newPassword" class="control-label">New Password</label>
                 <input asp-for="newPassword" class="form-control" />
                 <span asp-validation-for="newPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="repeatPassword" class="control-label"></label>
+                <label asp-for="repeatPassword" class="control-label">Repeat Password</label>
                 <input asp-for="repeatPassword" class="form-control" />
                 <span asp-validation-for="repeatPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
