--- a/SportEvent/Views/User/Login.cshtml
+++ b/SportEvent/Views/User/Login.cshtml
@@ -17,16 +17,16 @@
                 <span asp-validation-for="id" class="text-danger"></span>
             </div> *@
             <div class="form-group">
-                <label asp-for="email" class="control-label"></label>
+                <label asp-for="email" class="control-label">Email<span class="text-danger">*</span></label>
                 <input asp-for="email" class="form-control" />
                 <span asp-validation-for="email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="password" class="control-label"></label>
+                <label asp-for="password" class="control-label">Password<span class="text-danger">*</span></label>
                 <input asp-for="password" class="form-control" />
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
