--- a/SportEvent/Views/User/Register.cshtml
+++ b/SportEvent/Views/User/Register.cshtml
@@ -6,39 +6,38 @@
 
 <h1>Register</h1>
 
-<h4>RegisterModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="firstName" class="control-label"></label>
+                <label asp-for="firstName" class="control-label">First Name<span class="text-danger">*</span></label>
                 <input asp-for="firstName" class="form-control" />
                 <span asp-validation-for="firstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="lastName" class="control-label"></label>
+                <label asp-for="lastName" class="control-label">Last Name<span class="text-danger">*</span></label>
                 <input asp-for="lastName" class="form-control" />
                 <span asp-validation-for="lastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="email" class="control-label"></label>
+                <label asp-for="email" class="control-label">Email<span class="text-danger">*</span></label>
                 <input asp-for="email" class="form-control" />
                 <span asp-validation-for="email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="password" class="control-label"></label>
+                <label asp-for="password" class="control-label">Password<span class="text-danger">*</span></label>
                 <input asp-for="password" class="form-control" />
                 <span asp-validation-for="password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="repeatPassword" class="control-label"></label>
+                <label asp-for="repeatPassword" class="control-label">Repeat Password<span class="text-danger">*</span></label>
                 <input asp-for="repeatPassword" class="form-control" />
                 <span asp-validation-for="repeatPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
